# ChangeLog for x11-themes/oxygen-gtk
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.38 2012/06/19 12:11:40 scarabeus Exp $

  19 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> -oxygen-gtk-1.0.3.ebuild,
  -oxygen-gtk-1.2.3.ebuild, oxygen-gtk-1.0.5.ebuild, oxygen-gtk-1.2.5.ebuild:
  Stabilise latest to be done with the lo issues for good.

*oxygen-gtk-1.0.5 (19 Jun 2012)
*oxygen-gtk-1.2.5 (19 Jun 2012)

  19 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +oxygen-gtk-1.0.5.ebuild,
  +oxygen-gtk-1.2.5.ebuild, -oxygen-gtk-1.0.4.ebuild, -oxygen-gtk-1.2.4.ebuild:
  Bump to 1.0.5 and 1.2.5 respectively, finaly fixes lo issues.

*oxygen-gtk-1.2.4 (15 May 2012)

  15 May 2012; Johannes Huber <johu@gentoo.org> +oxygen-gtk-1.2.4.ebuild:
  Version bump in slot 2.

  04 May 2012; Johannes Huber <johu@gentoo.org> oxygen-gtk-1.0.3.ebuild,
  oxygen-gtk-1.2.3.ebuild:
  Migrate to virtual/pkgconfig.

  22 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/oxygen-gtk-1.2.2-fix-filezilla-crash.patch, -oxygen-gtk-1.0.1.ebuild,
  -oxygen-gtk-1.0.2.ebuild, -oxygen-gtk-1.2.1.ebuild,
  -oxygen-gtk-1.2.2-r1.ebuild, oxygen-gtk-1.0.3.ebuild, oxygen-gtk-1.2.3.ebuild:
  Stabilise latest on amd64 and x86. Remove older. Fix desc for gtk3 version.

*oxygen-gtk-1.0.3 (14 Apr 2012)

  14 Apr 2012; Johannes Huber <johu@gentoo.org> +oxygen-gtk-1.0.3.ebuild:
  Version bump in slot 3.

*oxygen-gtk-1.2.3 (14 Apr 2012)

  14 Apr 2012; Johannes Huber <johu@gentoo.org> +oxygen-gtk-1.2.3.ebuild,
  -oxygen-gtk-1.2.2.ebuild:
  Version bump, remove old in slot 2.

*oxygen-gtk-1.2.2-r1 (12 Apr 2012)

  12 Apr 2012; Johannes Huber <johu@gentoo.org>
  +files/oxygen-gtk-1.2.2-fix-filezilla-crash.patch,
  +oxygen-gtk-1.2.2-r1.ebuild:
  Revision bump in slot 2. Add upstream patch to fix crash with filezilla wrt
  bug #410817.

*oxygen-gtk-1.0.2 (12 Mar 2012)
