@@ -1,26 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST oxygen-gtk2-1.2.5.tar.bz2 191613 RMD160 ec65ded52145af7142e949bd5022b7b0b4b299a5 SHA1 1313aa11e334c7f8eb6cf54b8117b1a4ebc0641b SHA256 adab470bea43edc43c11b3d51635a4f1e697310aca561798b6a62a46842da7b3
-DIST oxygen-gtk3-1.0.5.tar.bz2 185761 RMD160 cdadc6f40deb7800268c748f17214a6a102dcd97 SHA1 c8b0d547c2ead462b4c25ad5a2ea1c1a9b614edf SHA256 210193d8d394fc76f5aaec5168b4a0e45f5b86afc9c5fa14e179a73e07696d4e
-EBUILD oxygen-gtk-1.0.5.ebuild 1099 RMD160 445bd9728db6b558b0fe58dca56de92d7a615c75 SHA1 1fe65853508f04624eeabc4794e03e0d27d0f055 SHA256 d82f3d3dea125885d860201f7245aa0b9e9584e06bf03d8e2440198dd5b7ccf3
-EBUILD oxygen-gtk-1.2.5.ebuild 1124 RMD160 c5ac8d9d682b5ce4c21fe6cf31fc2e649d6dafd4 SHA1 307b362a25e0e590ec0822e5f85bb132f891150f SHA256 ca079cdfdfb8db9aa47c7928430b6cc379e4d73c4429a205c2418f25addac569
-MISC ChangeLog 6912 RMD160 93fdeb0ce26230eb24a3f2360d97a15349677e21 SHA1 bd2e0f0987f5de0aa365428fc902f0355deffa4f SHA256 afc92997de673d7bdc5a86ba87cab956bc59c40f8803c7faa96e8ef08bb3aa99
-MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
+DIST oxygen-gtk2-1.2.5.tar.bz2 191613 SHA256 adab470bea43edc43c11b3d51635a4f1e697310aca561798b6a62a46842da7b3 SHA512 9b6968539dbde0ea7ca939166a85e086ba6eed5b6c6e8191109105dba57b4b727fc069256459d96bf2bfac9299d5add8ffbe1a4539ef7e8c2eabbfa7851822f7 WHIRLPOOL e8161a5c878740983e308faacd5cf8384fa3be2f432c2ab1872e27eadd85bdd833e935f09984d1b06e62b20075e3fec4269cd151493e2a4242fefc813e9b40aa
+DIST oxygen-gtk2-1.3.0.tar.bz2 193987 SHA256 a8879f18ed454e51f9dda1a242412b08d8a08481beb311bcc294dbec8ad0fd33 SHA512 18833fe056e711a99b1f52957e5b1c2e68cd4954b78370b8bccf9d1947e0ce3e0e6d6a0bf764984bea6e6bd89f48e590d6838590339e102cf0f1d118e0ccc253 WHIRLPOOL 00e724f8c7b2ffa2d7cd76f19a23db911f485290f6ad9d3bdd56b1df72b7140237e381d84ca3d5e7f70fbe8b688fb025f09c56b95fecbcf615450b46315d4be3
+DIST oxygen-gtk3-1.0.5.tar.bz2 185761 SHA256 210193d8d394fc76f5aaec5168b4a0e45f5b86afc9c5fa14e179a73e07696d4e SHA512 d0afd8cd30a8a3dbf7cf9f253f185c7e9f14fe2b6ebffe818396ec692235202910149130a745c55a3b83b8863212edce6abef28575abfaddf2af40e201c14daa WHIRLPOOL b9cb0fd402615ed401bdd1c64663e804a68537a239c4179a482ab22bfa3a50a2e18e0ca1fad494b35e6587c4d1c853597f83c8f815a5c2696e8840638ec02a1e
+EBUILD oxygen-gtk-1.0.5.ebuild 1099 SHA256 d82f3d3dea125885d860201f7245aa0b9e9584e06bf03d8e2440198dd5b7ccf3 SHA512 9415f63241724fcb29a4c6a7b6ea80ffd5d75b0f8bd893c99440892c612daee9f229e1e99afe4cb1426af114c930604ef116cd99e38cf3f214dfa1723d15eecd WHIRLPOOL 4821fd5b4ef6fd07dca17c9f3568ebc1c4e6610514424dec73f781fec64be2f284b36140036e52a417356a0bbe4f4c272c5465ac3d5742d7c8e55b4d7de67bc8
+EBUILD oxygen-gtk-1.2.5.ebuild 1124 SHA256 ca079cdfdfb8db9aa47c7928430b6cc379e4d73c4429a205c2418f25addac569 SHA512 573e0df5443081214851d1c75d069d7ed590437acff94fe5667c02812b53ae213c33c0ae663dc5672c7d733e61d7bd1eb5591df652d34ceb18e61b03c0f87d27 WHIRLPOOL 5faa5ae410bf692c475feefe2757eb6ae495a186e15491c7a517be8a342d5d8b97ce11e449e28389a23d324c8a7aa59dc5211861412a732e80c3a790821d6d52
+EBUILD oxygen-gtk-1.3.0.ebuild 1126 SHA256 1667397fc61cad293bf31228040e8bcb7797e5e71dab7e1131c7a6fd7b6aa842 SHA512 c1f48205f4236d0a9e296971301e094127ca38ad395346d932ecb1462b8c555e87b5bf761a0dcff29386d2ffabb220fe601c4f96157d76a65245d66550cc8250 WHIRLPOOL 104892337d6c133f64d2ee88d2c4ee75034571c4e4c4711a4a370a5b6d7ce1de6b695472ad6236b8d15ba4a95c9076f22952063ec60b8bcc88bec00c18eebfd1
+MISC ChangeLog 7040 SHA256 06c2e84c50a39820c0d34b267e7a647774a75e8a56fb7b2f0b6c88033fc09e92 SHA512 e06559e5f236989d055b83327f61c9aba107ba1749da482ec66bf94eb4b4c4a8c2ebcf2c0ff4cd2ae4ecc2bf386070b59fc5dbabfd15321efc053fda25210f09 WHIRLPOOL eff8470dbb1767995226321a762a72e820e2a201ab629a713c6fec995952e4b03a6a30115d56ff7b065ccf7205bb4fed756790865ead11a6af32c46a12a57a5a
+MISC metadata.xml 157 SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892 SHA512 657d6b0a31ceb7ac10bedfd5cbd634d4ff47938bd2f321203f0233e53686f7e0fd460e81f82793804895c7e97cfa472c1ca44b93314574262ee8cc5745a3efd0 WHIRLPOOL 785331909f1834cdd5d797ad484ea0e35c3e44c79a8a7517a6fb5de926acd181abd57910c8d960fb2e11ea38ddea336bca309af16fcc2df68fe4b602bca120b3
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBAgAGBQJP4Gy9AAoJEOSiRoyO7jvoCfAP/ijNF8Dg/ilBMeczgYeyboKQ
-bYYRXgV3Y7TaA7fy/OkcNTeL4PU2eWo+0sRiEd3zCnYua+b1W3Hy5TwYZgCHl7pR
-caIVe89HS6DMCzjxJUwxyxoLMvZ9oSnTBD31PF7k+5XW+QxQAYtf3RQQK3mzjW/r
-1mHbrPvh95g+EGW2y1hiNKFvWe1muMjJqv0dugJZ/h9b9gOLD7/2MaRgKAFYgDLa
-Ih+xrvTvBsMtXHk2D48FZWFCQzo8lks9Imr3A++yY/b5xswT/6T53QXt22zboJZh
-16Yz4qPEjsK4ozgO9KphnJsn4zK3i3aGcqho85GAiRXkcVZZGFFSxgWuqE11KYrP
-d0n+9oJtVptB+IyfHsxpPxKOPFBsAmt7E3rgXiPkvfU9DYfhZVDgi8ZgBiT1nAa0
-TnU9CNU3AnCDmc96P2BNRJaN+B4FMNdg2f4PKmTtxjXSYFHR6jXTjZt6w6llJ8wF
-51bQrTW1T/cjM40UJ2PEXLcs0U2sKjgK6VOw4bKNiYuEtDjggjf0+H6i+ckzTYQ+
-P5m/vvg29Ikb4hNs5CeijkMNUchoQgm1DU9CtUc1UZTxGGcgr6hFV7mf15ZckDFc
-39XpraGlTd1XQk2R5W6HwtfpS61dvOEamPYa07T88UvM+NAAsFgwsnK0gT96itsw
-DCFmmqWCDBjr+VrA+k5D
-=OK9G
+iQEcBAEBCAAGBQJQBsjSAAoJEO+t9ga+3I3a5vQIAMbopvEfxtrVl273ljoZEps5
+QDpNMr94WTDYJ6+s8ofBhGbG/qQfyjl/nreO7ZqHG6zxVDMgY5HYOi/O5ikt3qVB
+ltiyNYaYKfqb6s0/ebkaBIM7ApIpxVpAkNM1ecwecsUFVRF0vXPcxtK3VnF/kATW
+QW0ve6ibPXlVFIoVocx1L5+/wy/dnWBJW09W0bn0YHy4S7YLGAjJfaqqLiH5Oo8p
+mjuT5bI5WYdwKz25+3nHCjjKqWGEj3obxpS05LI0rupZoKkA0D2ePbBywjGmjRiT
+9mPAsb1mM4r+1yY8c1pSh+r852HPeAC0QOwqJyCNEn2r/d1mzFW66wpGZn7Qd/s=
+=/BeO
 -----END PGP SIGNATURE-----
