@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/oxygen-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.38 2012/06/19 12:11:40 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/oxygen-gtk/ChangeLog,v 1.39 2012/07/18 14:31:48 johu Exp $
+
+*oxygen-gtk-1.3.0 (18 Jul 2012)
+
+  18 Jul 2012; Johannes Huber <johu@gentoo.org> +oxygen-gtk-1.3.0.ebuild:
+  Version bump in SLOT 2.
 
   19 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> -oxygen-gtk-1.0.3.ebuild,
   -oxygen-gtk-1.2.3.ebuild, oxygen-gtk-1.0.5.ebuild, oxygen-gtk-1.2.5.ebuild:
@@ -202,4 +207,3 @@
   13 Dec 2010; Dror Levin <spatz@gentoo.org> +oxygen-gtk-1.0.0.ebuild,
   +metadata.xml:
   Initial import, ebuild by Enrico Tagliavini from kde overlay.
-
